--- a/presentation_report/thesis/biblio.bib
+++ b/presentation_report/thesis/biblio.bib
@@ -689,4 +689,98 @@ url = {https://doi.org/10.1016/S0140-6736(97)04011-7}
  year = {2005}
 }
 
+@misc{dandl2025,
+      title={Nonparanormal Adjusted Marginal Inference}, 
+      author={Susanne Dandl and Torsten Hothorn},
+      year={2025},
+      eprint={2503.01657},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME},
+      url={https://arxiv.org/abs/2503.01657}, 
+}
 
+@article{liu2009,
+author = {Liu, Han and Lafferty, John and Wasserman, Larry},
+title = {The Nonparanormal: Semiparametric Estimation of High Dimensional Undirected Graphs},
+year = {2009},
+issue_date = {12/1/2009},
+publisher = {JMLR.org},
+volume = {10},
+issn = {1532-4435},
+journal = {J. Mach. Learn. Res.},
+month = dec,
+pages = {2295-2328},
+numpages = {34}
+}
+
+
+@article{klein2022,
+author = {Klein, Nadja and Hothorn, Torsten and Barbanti, Luisa and Kneib, Thomas},
+title = {Multivariate conditional transformation models},
+journal = {Scandinavian Journal of Statistics},
+volume = {49},
+number = {1},
+pages = {116-142},
+keywords = {constrained optimization, copula, marginal distributions, most likely transformations, multivariate regression, normalizing flows, seemingly unrelated regression},
+doi = {https://doi.org/10.1111/sjos.12501},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/sjos.12501},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/sjos.12501},
+abstract = {Abstract Regression models describing the joint distribution of multivariate responses conditional on covariate information have become an important aspect of contemporary regression analysis. However, a limitation of such models are the rather simplistic assumptions often made, for example, a constant dependence structure not varying with covariates or the restriction to linear dependence between the responses. We propose a general framework for multivariate conditional transformation models that overcomes these limitations and describes the entire distribution in a tractable and interpretable yet flexible way conditional on nonlinear effects of covariates. The framework can be embedded into likelihood-based inference, including results on asymptotic normality, and allows the dependence structure to vary with covariates. In addition, it scales well-beyond bivariate response situations, which were the main focus of most earlier investigations. We illustrate the benefits in a trivariate analysis of childhood undernutrition and demonstrate empirically that complex truly multivariate data-generating processes can be inferred from observations.},
+year = {2022}
+}
+
+@article{aalen2015,
+author = {Aalen, Odd and Cook, Richard and R{\o}ysland, Kjetil},
+year = {2015},
+month = {06},
+pages = {},
+title = {Does Cox analysis of a randomized survival study yield a causal treatment effect?},
+volume = {21},
+journal = {Lifetime data analysis},
+doi = {10.1007/s10985-015-9335-y}
+}
+
+@Manual{comets,
+  title        = {comets: Covariance Measure Tests for Conditional Independence},
+  author       = {Lucas Kook},
+  year         = {2024},
+  note         = {R package version 0.1-1},
+  url          = {https://cran.r-project.org/web/packages/comets},
+  howpublished = {\url{https://cran.r-project.org/web/packages/comets}},
+  urldate      = {2025-07-08}
+}
+
+
+@Manual{reticulate,
+  title = {reticulate: Interface to 'Python'},
+  author = {Kevin Ushey and JJ Allaire and Yuan Tang},
+  year = {2025},
+  note = {R package version 1.42.0,
+    https://github.com/rstudio/reticulate},
+  url = {https://rstudio.github.io/reticulate/},
+}
+
+@misc{keras,
+  title={R Interface to Keras},
+  author={Chollet, Fran\c{c}ois and Allaire, JJ and others},
+  year={2017},
+  publisher={GitHub},
+  howpublished={\url{https://github.com/rstudio/keras}},
+}
+
+@Manual{tensorflow,
+    title = {tensorflow: R Interface to 'TensorFlow'},
+    author = {JJ Allaire and Yuan Tang},
+    year = {2025},
+    note = {R package version 2.16.0.9000},
+    url = {https://github.com/rstudio/tensorflow},
+  }
+
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2024},
+    url = {https://www.R-project.org/},
+  }
