--- a/presentation_report/thesis/title.tex
+++ b/presentation_report/thesis/title.tex
@@ -7,10 +7,14 @@
 \begin{center}
 \setlength{\parindent}{0cm}
 \bf\Large% 
-Modeling Functional Relationships in Causal Graphs \\
-and Estimating Individualized Interventions: \\
-Neural Causal Models (TRAM-DAGs) and \\
-Conditional Average Treatment Effects
+
+Functional Modeling with Neural Causal Models \\
+and Personalized Treatment Effect Estimation 
+
+% Modeling Functional Relationships in Causal Graphs \\
+% and Estimating Individualized Interventions: \\
+% Neural Causal Models (TRAM-DAGs) and \\
+% Conditional Average Treatment Effects
 
 \normalfont
 
@@ -41,7 +45,7 @@ supervised by
 
 \vspace*{1cm}
 
-Prof. Dr. Beate Sick \\
+Prof. Dr. Beate Sick, University of Zurich \& ZHAW \\
 Prof. Dr. Oliver D{\"u}rr, HTWG Konstanz
 \vfill
 
